# pyomo_windows

./: README.md  publish.sh  pyproject.toml  requirements.txt  solvers_download_instructions.md
src/pyomo_windows/: __init__.py
